--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,9 @@
 <html>
 <body>
 <h1>Home Page</h1>
+  <ol>
+    <li>Tsalemis: 109310293</li>
+    <li>Thalis: 9438593</li>
+  </ol> 
 </body>
 </html>
