--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,10 @@
 <body>
 <h1>Home Page</h1>
   <ol>
+    <!--starts_here-->
     <li>Tsalemis: 109310293</li>
     <li>Thalis: 9438593</li>
+    <!--ends_here-->
   </ol> 
 </body>
 </html>
