--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <!--starts_here-->
     <li>Tsalemis: 109310293</li>
     <li>Thalis: 9438593</li>
+    <li>Thodoris: 140520</li>
     <!--ends_here-->
   </ol> 
 </body>
